--- a/Aspnet-Microservices/docker-compose.yml
+++ b/Aspnet-Microservices/docker-compose.yml
@@ -3,11 +3,35 @@ version: '3.4'
 services:
   catalogdb:
     image: mongo
+
+  basketdb:
+    image: redis:alpine
+    #alpine version is light version and use less space
+
+  discountdb:
+    image: postgres
+
+  portainer:
+    image: portainer/portainer-ce
+
+  pgadmin:
+    image: dpage/pgadmin4
+
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalogapi
     build:
       context: .
       dockerfile: Catalog.Api/Dockerfile
 
+  basket.api:
+    image: ${DOCKER_REGISTRY-}basketapi
+    build:
+      context: .
+      dockerfile: Basket.Api/Dockerfile
+
 volumes:
   mongo-data:
+  portainer_data:
+  postgres_data:
+  pgadmin_data:
+
