--- a/Aspnet-Microservices/docker-compose.yml
+++ b/Aspnet-Microservices/docker-compose.yml
@@ -29,9 +29,16 @@ services:
       context: .
       dockerfile: Basket.Api/Dockerfile
 
+  discount.api:
+    image: ${DOCKER_REGISTRY-}discountapi
+    build:
+      context: .
+      dockerfile: Discount.Api/Dockerfile
+
 volumes:
   mongo-data:
   portainer_data:
   postgres_data:
   pgadmin_data:
+
 
