--- a/Aspnet-Microservices/docker-compose.yml
+++ b/Aspnet-Microservices/docker-compose.yml
@@ -35,10 +35,17 @@ services:
       context: .
       dockerfile: Discount.Api/Dockerfile
 
+  discount.grpc:
+    image: ${DOCKER_REGISTRY-}discountgrpc
+    build:
+      context: .
+      dockerfile: Discount.Grpc/Dockerfile
+
 volumes:
   mongo-data:
   portainer_data:
   postgres_data:
   pgadmin_data:
+
 
 
